RefreshToken bug fix
